--- a/perfil.html
+++ b/perfil.html
@@ -13,6 +13,6 @@
       alt="Imagem de uma mulher com uma câmera"
       width="300"
     />
-    <a href="homepage.html">Sair</a>
+    <a href="index.html">Sair</a>
   </body>
 </html>
